# utext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: CMakeLists.txt
app/resources/: app_win32.rc  myres.qrc  utext_icon.icns
app/src/: CMakeLists.txt  actions.cpp  clicks.cpp  highlighter.cpp  highlighter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myfind.cpp  myfind.h  myfind.ui  mytextedit.cpp  mytextedit.h  openFile.cpp  openFile.h  searchhighlight.cpp  searchhighlight.h  theme.cpp  themes.cpp  utils.cpp  utils.cpp.autosave
