cmake_minimum_required(VERSION 3.18.2)

set(TARGET utext)

project(${TARGET} VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

add_subdirectory(app)

target_include_directories(${TARGET} PUBLIC ${PROJECT_BINARY_DIR})